--- a/index.html
+++ b/index.html
@@ -54,5 +54,14 @@
                 </div>
             </div>
         </div>
+        <div class="third-section">
+            <h3>This is an spiring quote, or a testimonial from a <br/> 
+                customer. Maybe it's just filling up space, or maybe <br/>
+                people will actually read it. Who knows? All I know <br/>
+                is that it look nice.</h3>
+            <div id="p-div">
+                <p class="p-third">Thor, God of Thunder</p>
+            </div>
+        </div>
     </body>
 </html>
